# trae-123

./: .env.example  .gitignore  README.md  package-lock.json  package.json  setup.sh  start-all.sh  start-backend.sh  start-frontend.sh
backend/: .env.example  .gitignore  Cargo.toml  Rocket.toml  app.py  auth.js  auth.py  auth_service.py  check.py  check_db.py  config.py  database.go  database.py  db.js  dependencies.py  go.mod  go.sum  handlers.go  index.js  init-db.js  init.sql  init_data.py  init_db.py  main.go  main.py  manage.py  middleware.go  migrate_evidence.py  models.go  models.py  package-lock.json  package.json  project_service.py  requirements.txt  reset_and_check.py  routes.go  routes.py  run.py  schemas.py  seed.py  (+18 more)
backend/api/: api.py  audit_api.py  auth.py  batch_api.py  export_api.py  listings_api.py  models.py  permissions.py  router.py  schemas.py  seed.py  utils.py
backend/app/: __init__.py  auth.py  config.py  constants.py  database.py  db.py  exceptions.py  init_db.py  main.py  middleware.py  models.py  permissions.py  repository.py  routes.py  schemas.py  security.py  seed.py  service.py  services.py  settings.py  utils.py  validator.py  workflow.py
backend/backend/: settings.py  urls.py
backend/bom_change/: asgi.py  settings.py  urls.py  wsgi.py
backend/config/: config.go  constants.go  settings.py  urls.py
backend/data/: init.sql  schema.sql  seed.py  seed.sql
backend/database/: database.go  db.go  index.js  init.go  init.js  seed.go
backend/glasses_order/: admin.py  api.py  apps.py  models.py  schemas.py
backend/handlers/: application.go  audit.go  auth.go  batch.go  expiry.go  export.go  handlers.go  patrol_orders.go  statistics.go  stats.go
backend/lab_appointment/: api.py  (+3 more)
(+998 files in other folders)
