[package]
name = "audit-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "1"
dotenv = "0.15"
