[package]
name = "news-editorial-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = { version = "1.3", features = ["static-files"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
tower-http = { version = "0.4", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.21"
rand = "0.8"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
